--- a/primeiro-projeto/docker-compose.yml
+++ b/primeiro-projeto/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: always
     ports:
       - "5432:5432"
-    volumes://
+    volumes:
       - .docker/dbdata:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=docker
